--- a/Ikilatini.mw
+++ b/Ikilatini.mw
@@ -1,6 +1,6 @@
 [[File:Rome Colosseum inscription 2.jpg|thumb|250px|<font color="green"> Kilatini </font>]]
 
-'''Kilatini''' (izina mu kilatini ''Lingua Latīna'') ni [[ururimi]] rwa kera zo mu [[Bulayi]].
+'''Kilatini''' (izina mu kilatini ''Lingua Latīna'') ni [[ururimi]] rwa kera zo mu [[Burayi]].
 
 == Alfabeti ya Kilatini ==
 
