--- a/Imigani_migufi_y’Ikinyarwanda.mw
+++ b/Imigani_migufi_y’Ikinyarwanda.mw
@@ -988,4 +988,4 @@
 *Zikamwa ayo zitahanye.
 
 == Ibitabo ==
-*'''J. Kananura''', Imigani y’imigenurano y’imfasha abarezi (Proverbes rwandais expliqués à l’usage des éducateurs), 1975, Butare
+*'''J. Kananura''', Imigani y’imigenurano y’imfasha abarezi (''Proverbes rwandais expliqués à l’usage des éducateurs''), 1975, Butare
