*Empty MediaWiki Message*

--- a/Noruveje.mw
+++ b/Noruveje.mw
@@ -6,7 +6,7 @@
 Muri Noruveje, hari imyaka cumi y’indero y’intango umwana wese ategerezwa kwiga; bisigura yuko abavyeyi bategerezwa kurungika abana babo mu mashure bakanakora kuburyo imyimenyerezo bahawe bayikora. Ishure ritoya n’ishure rikuru ritangura vyigwa kuri gusa, kandi ubutegetsi bw’agace ubamwo buriha ibitabo vy’amashure y’abana. 
 
 
-w’umwana wabo maze bagafata ingingo niba umwana wabo azogira iki Noruveje nk’ururimi rwa mbere canke urwa kabiri. Umunyeshure ashobora guhindura akava mu ki Noruveje nk’ururimi rwa kabiri akaja mu masomo asanzwe akoresha iki Noruveje mu gihe cose azoba yiga.
+W’umwana wabo maze bagafata ingingo niba umwana wabo azogira iki Noruveje nk’ururimi rwa mbere canke urwa kabiri. Umunyeshure ashobora guhindura akava mu ki Noruveje nk’ururimi rwa kabiri akaja mu masomo asanzwe akoresha iki Noruveje mu gihe cose azoba yiga.
 
 [[Category:Ibihugu]] 
 [[Category:Uburayi]]
