*Empty MediaWiki Message*

--- a/Bulugariya.mw
+++ b/Bulugariya.mw
@@ -1,7 +1,7 @@
 [[File:EU-Bulgaria.svg|thumb|Buligariya]]
 [[File:Flag of Bulgaria.svg|right|thumb|150px|Buligariya]]
 
-'''Buligariya''' n'igihugu muri [[Uburayi]].
+'''Buligariya''' n’igihugu muri [[Uburayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
