*Empty MediaWiki Message*

--- a/Cekiya.mw
+++ b/Cekiya.mw
@@ -1,7 +1,7 @@
 [[File:EU-Czechia.svg|thumb|Cekiya]]
 [[File:Flag of the Czech Republic.svg|right|thumb|150px|Cekiya]]
 
-'''Cekiya''' n'igihugu muri [[Uburayi]].
+'''Cekiya''' n’igihugu muri [[Uburayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
