*Empty MediaWiki Message*

--- a/Ubudage.mw
+++ b/Ubudage.mw
@@ -10,7 +10,7 @@
 |-
 | align=center colspan=2 | 
 |}
-Igihugu cyo mu [[Uburayi|Burayi]] bw'iburengerazuba.
+Igihugu cyo mu [[Uburayi|Burayi]] bw’iburengerazuba.
 
 
 == ==
