*Empty MediaWiki Message*

--- a/Danimarike.mw
+++ b/Danimarike.mw
@@ -1,7 +1,7 @@
 [[File:EU-Denmark.svg|thumb|Danimarike]]
 [[File:Flag of Denmark.svg|right|thumb|150px|Danimarike]]
 
-'''Danimarike''' n'igihugu muri [[Uburayi]].
+'''Danimarike''' n’igihugu muri [[Uburayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
