*Empty MediaWiki Message*

--- a/Esitoniya.mw
+++ b/Esitoniya.mw
@@ -1,7 +1,7 @@
 [[File:EU-Estonia.svg|thumb|Esitoniya]]
 [[File:Flag of Estonia.svg|right|thumb|150px|Esitoniya]]
 
-'''Esitoniya''' n'igihugu muri [[Uburayi]].
+'''Esitoniya''' n’igihugu muri [[Uburayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
