*Empty MediaWiki Message*

--- a/Ubufaransa.mw
+++ b/Ubufaransa.mw
@@ -1,7 +1,7 @@
 [[File:Location France EU Europe.png|thumb|Ubufaransa]]
 [[File:Flag of France.svg|right|thumb|80px]]
 
-'''UbuFaransa''' n'igihugu muri [[Uburayi]].
+'''UbuFaransa''' n’igihugu muri [[Uburayi]].
 
 
 {{DEFAULTSORT:Faransa}}
