*Empty MediaWiki Message*

--- a/Bugereki.mw
+++ b/Bugereki.mw
@@ -1,7 +1,7 @@
 [[File:Location Greece EU Europe.png|thumb|Ikigereki]]
 [[File:Flag of Greece.svg|right|thumb|150px|Bendera ry'Ikigereki]]
 
-'''Bugereki''' n'igihugu mu [[Burayi]].
+'''Bugereki''' n’igihugu mu [[Burayi]].
 
 
 {{DEFAULTSORT:Ikigereki}}
