*Empty MediaWiki Message*

--- a/Ubwongereza.mw
+++ b/Ubwongereza.mw
@@ -1,7 +1,7 @@
 [[File:Location UK EU Europe.png|thumb|UbwOngereza]]
 [[File:Flag of UK.svg|right|thumb|150px|Bendera ry'ubwOngereza]]
 
-'''UbwOngereza''' n'igihugu muri [[Uburayi]].
+'''UbwOngereza''' n’igihugu muri [[Uburayi]].
 
 
 {{DEFAULTSORT:Ongereza}}
