--- a/Silovakiya.mw
+++ b/Silovakiya.mw
@@ -1,7 +1,7 @@
 [[File:EU-Slovakia.svg|thumb|Silovakiya]]
 [[File:Flag of Slovakia.svg|right|thumb|150px|Silovakiya]]
 
-'''Silovakiya''' n'igihugu muri [[Uburayi]].
+'''Silovakiya''' n’igihugu muri [[Uburayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
