*Empty MediaWiki Message*

--- a/Siloveniya.mw
+++ b/Siloveniya.mw
@@ -1,7 +1,7 @@
 [[File:EU-Slovenia.svg|thumb|Siloveniya]]
 [[File:Flag of Slovenia.svg|right|thumb|150px|Siloveniya]]
 
-'''Siloveniya''' n'igihugu muri [[Uburayi]].
+'''Siloveniya''' n’igihugu muri [[Uburayi]].
 
  
 == Links ==
