--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -1,6 +1,6 @@
 [[File:MapOfTurkishSpeakers.png|thumb|350px|<font color="grey">Ikarita y’Ikinyaturukiya</font>]]
 
-'''Ikinyaturukiya''' ni [[ururimi]] rw’[[abanyaturukiya]]. 
+'''Ikinyaturukiya''' ni [[ururimi]] rw’[[abanyaturukiya]] na rwa [[Turukiya]]. 
 
 == umugereka – ubuke ==
 
