--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -20,8 +20,7 @@
 **'''ev''' &ndash; '''evler''' inzu &ndash; amazu
 
 
-
-[[Category:Indimi]]
+[[Category:Indimi z’ikinyaturukiya]]
 
 [[ace:Bahsa Tureuki]]
 [[af:Turks]]
