--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -19,6 +19,7 @@
 * '''CEPEX''' Ibiro by’igihugu bishinzwe ishoramari n’inkunga ituruka hanze y’igihugu
 * '''CEPGL''' [[Umuryango w’Ubukungu bw’Ibihugu byo mu Karere k’Ibiyaga Bigari]] (''Communauté Economique des Pays des Grands Lacs'')
 * '''CG''' Inzego nkuru za Leta
+* '''cg''' cyangwa
 * '''CI''' [[Abaguzi Mpuzamahanga]] (''Consumers International'') 
 * '''CIEL''' [[Ikigo Gishinzwe Amategeko Mpuzamahanga Arengera Ibidukikije]] (''Center for International Environmental Law'')
 * '''CMAC''' [[Isoko ry’Imari n’Imıgabane]] 
