--- a/Umurenge_wa_Muhima.mw
+++ b/Umurenge_wa_Muhima.mw
@@ -2,7 +2,7 @@
 
 Ikaze ku rubuga rw’umurenge wa Muhima, umwe mu Mirenge icumi igize [[Akarere ka Nyarugenge]]. Nyuma y’ivugurura ry’imitegerekere y’Igihugu ugizwe n’[[utugari]] turindwi (7) aritwo : [[Akagari ka Nyabugogo|Nyabugogo]], [[Akagari ka Kabeza|Kabeza]], [[Akagari ka Tetero|Tetero]], [[Akagari k’Amahoro|Amahoro]], [[Akagari ka Kabasengerezi|Kabasengerezi]], [[Akagari ka Rugenge|Rugenge]] n’[[Akagari k’Ubumwe|Ubumwe]]. Utwo tugari natwo tukaba tugizwe n’Imidugudu 39 
 
-Umurenge wa Muhima uhana imbibi n’Imirenge ya Kimisagara, Gitega na Nyarugenge, n’imwe mu Mirenge y’Akarere ka Gasabo. Ukaba ufite ubuso bungana na km2 2,92 n’abaturage 48.466 dukurikije ibyatangajwe n’ibarura rusange ryo mu mwaka w’2002. Ni ukuvuga ko uwo Murenge utuwe ku bucucike bw’abaturage 16 598/ km2. Ibi bikaba bisobanura imiturire y’Akajagari irangwa muri uwo Murenge. Tubifurije ku rwungukiraho byinshi mu bijyanye na serivisi ndetse n’amakuru ajyanye n’umurenge wanyu.
+Umurenge wa Muhima uhana imbibi n’Imirenge ya Kimisagara, Gitega na Nyarugenge, n’imwe mu Mirenge y’Akarere ka Gasabo. Ukaba ufite ubuso bungana na km² 2,92 n’abaturage 48.466 dukurikije ibyatangajwe n’ibarura rusange ryo mu mwaka w’2002. Ni ukuvuga ko uwo Murenge utuwe ku bucucike bw’abaturage 16 598/ km² . Ibi bikaba bisobanura imiturire y’Akajagari irangwa muri uwo Murenge. Tubifurije ku rwungukiraho byinshi mu bijyanye na serivisi ndetse n’amakuru ajyanye n’umurenge wanyu.
 
 == Imiyoboro ==
 [http://muhimasector.net/ Urubuga rw’Umurenge wa Muhima]
