*Empty MediaWiki Message*

--- a/Igiswahili.mw
+++ b/Igiswahili.mw
@@ -7,3 +7,98 @@ Mu rwego mpuzamahanga, Igiswahili gifata intera  kirushaho gukoreshwa  dore ko u
 Izo mpamvu zose  nizo zatumye ikinyamakuru Izuba Rirashye ryegereye Abanyarwanda batandukanye  mu duce twose tw’Igihugu, mu rwego rwo kumenya uko bafata urwo rurimi  n’uruhare babona rwagira mu  kuzahuza abatuye EAC, dore ko  unasanga Abanyarwanda batari bake bavuga Igiswahili.
 
 [[Category:Indimi z’ikibantu]]
+
+[[af:Swahili]]
+[[als:Swahili (Sprache)]]
+[[am:ስዋሂሊ]]
+[[ar:لغة سواحلية]]
+[[an:Idioma swahili]]
+[[ast:Suaḥili]]
+[[bn:সোয়াহিলি ভাষা]]
+[[be:Суахілі]]
+[[be-x-old:Суахілі]]
+[[bcl:Swahili]]
+[[bar:Swahili]]
+[[bs:Svahili jezik]]
+[[bg:Суахили]]
+[[ca:Suahili]]
+[[cv:Суахили чĕлхи]]
+[[cs:Svahilština]]
+[[cy:Swahili]]
+[[da:Swahili]]
+[[de:Swahili (Sprache)]]
+[[et:Suahiili keel]]
+[[el:Σουαχίλι γλώσσα]]
+[[es:Idioma suajili]]
+[[eo:Svahila lingvo]]
+[[eu:Swahili]]
+[[fa:زبان سواحیلی]]
+[[hif:Swahili bhasa]]
+[[fr:Swahili]]
+[[ga:Svahaílis]]
+[[gv:Swahilish]]
+[[gl:Lingua suahili]]
+[[ko:스와힐리어]]
+[[hi:स्वाहीली भाषा]]
+[[hsb:Swahilšćina]]
+[[hr:Svahili (makrojezik)]]
+[[io:Swahili-linguo]]
+[[id:Bahasa Swahili]]
+[[iu:ᑭᓱᐊᐦᐃᓪᐃ/kisuahili]]
+[[os:Суахили]]
+[[is:Svahílí]]
+[[it:Lingua swahili]]
+[[he:סווהילי]]
+[[kn:ಸ್ವಾಹಿಲಿ ಭಾಷೆ]]
+[[ka:სუაჰილი ენა]]
+[[sw:Kiswahili]]
+[[kg:Kiswahili]]
+[[la:Lingua Suahili]]
+[[lv:Svahili valoda]]
+[[lt:Svahilių kalba]]
+[[lij:Lengua swaïli]]
+[[li:Swahili]]
+[[ln:Kiswahíli]]
+[[hu:Szuahéli nyelv]]
+[[mk:Свахили јазик]]
+[[mg:Fiteny soahily]]
+[[mr:स्वाहिली भाषा]]
+[[arz:سواحيلى]]
+[[ms:Bahasa Swahili]]
+[[nah:Suahilitlahtōlli]]
+[[nl:Swahili]]
+[[new:स्वाहिली भाषा]]
+[[ja:スワヒリ語]]
+[[no:Swahili]]
+[[nn:Swahili]]
+[[nov:Swahilum]]
+[[oc:Swahili]]
+[[om:Swahili]]
+[[pa:ਸਵਾਹਿਲੀ]]
+[[pnb:سواحلی]]
+[[pl:Suahili]]
+[[pt:Língua suaíli]]
+[[ro:Limba swahili]]
+[[qu:Swahili simi]]
+[[ru:Суахили]]
+[[sah:Суаhили]]
+[[sco:Swauheely leid]]
+[[scn:Kiswahili]]
+[[simple:Swahili language]]
+[[sk:Swahilčina]]
+[[so:Sawaaxili]]
+[[sr:Свахили]]
+[[fi:Swahilin kieli]]
+[[sv:Swahili]]
+[[ta:சுவாகிலி மொழி]]
+[[th:ภาษาสวาฮีลี]]
+[[tg:Забони своҳилӣ]]
+[[tr:Svahili]]
+[[uk:Кісуахілі]]
+[[ug:سۋاھىلىچە]]
+[[vec:Łéngoa swahili]]
+[[vi:Tiếng Swahili]]
+[[wa:Suwahili]]
+[[wo:Kiswahili]]
+[[yo:Èdè Swàhílì]]
+[[zh:斯瓦希里语]]
