*Empty MediaWiki Message*

--- a/Igiswahili.mw
+++ b/Igiswahili.mw
@@ -8,6 +8,9 @@ Mu rwego mpuzamahanga, Igiswahili gifata intera  kirushaho gukoreshwa  dore ko u
 
 Izo mpamvu zose  nizo zatumye ikinyamakuru Izuba Rirashye ryegereye Abanyarwanda batandukanye  mu duce twose tw’Igihugu, mu rwego rwo kumenya uko bafata urwo rurimi  n’uruhare babona rwagira mu  kuzahuza abatuye EAC, dore ko  unasanga Abanyarwanda batari bake bavuga Igiswahili.
 
+== Imiyoboro ==
+*http://www.izuba.org.rw/index.php?issue=120&article=1725
+
 [[Category:Indimi z’ikibantu]]
 
 [[af:Swahili]]
