*Empty MediaWiki Message*

--- a/Umurenge_wa_Mageragere.mw
+++ b/Umurenge_wa_Mageragere.mw
@@ -1,10 +1,10 @@
-'''Umurenge wa Mageragere''' ni umwe mu mirenge 10 igize Akarere ka Nyarugenge, ni Umurenge wahoze mu cyari Akarere ka Butamwa mbere y’ivugururwa ry’ubutegetsi.
+'''Umurenge wa Mageragere''' ni umwe mu mirenge 10 igize [[Akarere ka Nyarugenge]], ni Umurenge wahoze mu cyari [[Akarere ka Butamwa]] mbere y’ivugururwa ry’ubutegetsi.
 
 Umurenge wa Mageragere ufite ubuso bwa km2 54.8 n’abaturage 16800. Ugizwe n’Utugari turindwi: Nyarufunzo, Kankuba, Mataba, Nyarurenzi, Runzenze,Ntungamo naKavumu.
 
-N’ubwo Mageragere iri mu mujyi wa Kigali, abaturage bayo bafite ubuzima bw’igiturage. Abo baturage barahinga kandi ingufu bakoresha mugutegura ibiribwa ni inkwi.
+N’ubwo Mageragere iri mu mujyi wa [[Kigali]], abaturage bayo bafite ubuzima bw’igiturage. Abo baturage barahinga kandi ingufu bakoresha mugutegura ibiribwa ni inkwi.
 
-Muri iyi gahunda y’umwaka umwe, Umurenge uzita kubikorwa bizacyemura ibibazo abawutuye bose bahura nabyo. Ibi byose kandi Umurenge uzabikora utibagiwe ko bigomba kuba ibikorwa birambye, ni ukuvuga ko mu bizakorwa byose hazitabwa mu kubungabunga ibidukikije harwanywa isuri kandi hanarindwa amashyamba. Ibindi ni uko isuku izakomeza kuranga abaturage ba Mageragere kandi nk’uko bizwi ko Umuturage ariwe shingiro ry’amajyambere, hazakorwa ibishoboka byose ngo abaturage barindwe indwara z’ibyorezo nka SIDA na Malariya nizindi ndwara ziterwa nisuku nke cyangwa imirire mibi kandi banakangurirwe kujya mu bwisungane mu kwivuza .
+Muri iyi gahunda y’umwaka umwe, Umurenge uzita kubikorwa bizacyemura ibibazo abawutuye bose bahura nabyo. Ibi byose kandi Umurenge uzabikora utibagiwe ko bigomba kuba ibikorwa birambye, ni ukuvuga ko mu bizakorwa byose hazitabwa mu kubungabunga ibidukikije harwanywa isuri kandi hanarindwa amashyamba. Ibindi ni uko isuku izakomeza kuranga abaturage ba Mageragere kandi nk’uko bizwi ko Umuturage ariwe shingiro ry’amajyambere, hazakorwa ibishoboka byose ngo abaturage barindwe indwara z’ibyorezo nka [[SIDA]] na Malariya nizindi ndwara ziterwa nisuku nke cyangwa imirire mibi kandi banakangurirwe kujya mu bwisungane mu kwivuza .
 
 Imishinga izashyirwa mu bikorwa muri uyu mwaka ni iyo . ku baka gereza nkuru ya kigali,kugeza amazi meza kubaturage,gusana ibiro bytimurenge,amashyiga ya kijyambere, gushinga ishami rya banki yabaturage, kandi bunguka ubumenyi mu gukora imirimo itandukanye. Abaturage bazakangurirwa kuzigama, gutegura udushinga duto, maze ibi bizatume bivana koko mu bukene.
 
