--- a/Igiswahili.mw
+++ b/Igiswahili.mw
@@ -2,7 +2,7 @@
 
 '''Igiswahili''' cyangwa '''Igiswahiri''' (na '''igiswayili''' cyangwa '''igiswayiri''')
 
-Ururimi rw’igiswahiri ni rumwe mu ruzahuza abaturage benshi batuye mu Bihugu 5  bigeze Umuryango w’Ibihugu by’Iburasirazuba EAC aribyo u [[Burundi]] n’u [[Rwanda]]. Nubwo ibyo Bihugu bifite amateka amwe ariko bikaba bitandukanywa n’uburyo byakoronejwe,  ibyo bigatuma  bivuga indimi zitandukanye cyane cyane icyongereza kivugwa mu Bihugu bitatu byakoronijwe n’abongereza aribyo [[Uganda]], [[Kenya]] na [[Tanzaniya]], naho u Burundi n’u Rwanda  byakoronijwe n’u [[Bubiligi]] bikavuga [[Igifaransa]],  usanga ururimi rw’igiswahili ari rwo  abaturage benshi abize n’abatize bahuriraho mu buzima bwa buri munsi akaba ari narwo rurimi ruvugwa cyane  mu mibanire y’abatuye EAC cyane cyane  urwo rurimi rukaba rukoreshwa mu bucuruzi, mu muziki, mu mikino, mu madini n’ahandi,  naho igifaransa n’icyongereza bikavugwa mu buzimam mu buyobozi.
+Ururimi rw’igiswahiri ni rumwe mu ruzahuza abaturage benshi batuye mu Bihugu 5  bigeze Umuryango w’Ibihugu by’Iburasirazuba EAC aribyo u [[Burundi]] n’u [[Rwanda]]. Nubwo ibyo Bihugu bifite amateka amwe ariko bikaba bitandukanywa n’uburyo byakoronejwe,  ibyo bigatuma  bivuga indimi zitandukanye cyane cyane icyongereza kivugwa mu Bihugu bitatu byakoronijwe n’abongereza aribyo [[Uganda]], [[Kenya]] na [[Tanzaniya]], naho u Burundi n’u Rwanda  byakoronijwe n’u [[Bubiligi]] bikavuga [[Igifaransa]],  usanga ururimi rw’igiswahili ari rwo  abaturage benshi abize n’abatize bahuriraho mu buzima bwa buri munsi akaba ari narwo rurimi ruvugwa cyane  mu mibanire y’abatuye EAC cyane cyane  urwo rurimi rukaba rukoreshwa mu bucuruzi, mu muziki, mu mikino, mu madini n’ahandi,  naho [[igifaransa]] n’[[icyongereza]] bikavugwa mu buzimam mu buyobozi.
 
 Mu rwego mpuzamahanga, Igiswahili gifata intera  kirushaho gukoreshwa  dore ko ubu kibarirwa mu ndimi zigenda zirushaho kuvugwa n’abantu benshi cyane cyane mu nganda, ubuhahirane n’ubucuruzi.
 
