--- a/Sekiriko_(filimi).mw
+++ b/Sekiriko_(filimi).mw
@@ -1,1 +1,3 @@
 '''Sekiriko''' ni [[filimi]] nyarwanda ya ''comedy'' (zimwe zisetsa abantu), imaze gukorwa na Emma entertainment God with us, ikigkorwa cyo kuyitunganye kikaba cyararangiye kuwa 23 Ugushyingo uyu mwaka.
+
+[[Category:Filimi]]
