--- a/Itsembabwoko_ry’u_Rwanda_ry’1994.mw
+++ b/Itsembabwoko_ry’u_Rwanda_ry’1994.mw
@@ -37,8 +37,7 @@ Ijambo genocide rimaze imyaka 62. Ryahimbwe mu 1994 na Raphael Lemkin, Umuyahudi
 == External links ==
 *http://rwandinfo.com/kinya/category/jenoside/ 
 
-[[Category:Itsembabwoko]]
-[[Category:Amateka y'u Rwanda]] 
+[[Itsembabwoko ry’u Rwanda ry’1994]] 
 
 [[ar:الإبادة الجماعية في رواندا]]
 [[az:Ruanda soyqırımı]]
