*Empty MediaWiki Message*

--- a/Itsembabwoko_ry’u_Rwanda_ry’1994.mw
+++ b/Itsembabwoko_ry’u_Rwanda_ry’1994.mw
@@ -37,7 +37,7 @@ Ijambo genocide rimaze imyaka 62. Ryahimbwe mu 1994 na Raphael Lemkin, Umuyahudi
 == External links ==
 *http://rwandinfo.com/kinya/category/jenoside/ 
 
-[[Itsembabwoko ry’u Rwanda ry’1994]] 
+[[Category:Itsembabwoko ry’u Rwanda ry’1994]] 
 
 [[ar:الإبادة الجماعية في رواندا]]
 [[az:Ruanda soyqırımı]]
