--- a/Hotel_Rwanda.mw
+++ b/Hotel_Rwanda.mw
@@ -5,3 +5,31 @@ Rusesabagina ni wa munyarwanda uvugwa muri '''Filimi yitwa Hotel Rwanda''' aho b
 
 [[Category:Filimi]]
 [[Category:Itsembabwoko ry’u Rwanda ry’1994]]
+
+[[bn:হোটেল রুয়ান্ডা]]
+[[ca:Hotel Rwanda]]
+[[cs:Hotel Rwanda]]
+[[da:Hotel Rwanda]]
+[[de:Hotel Ruanda]]
+[[es:Hotel Rwanda]]
+[[fr:Hotel Rwanda]]
+[[gl:Hotel Rwanda]]
+[[id:Hotel Rwanda]]
+[[it:Hotel Rwanda]]
+[[he:מלון רואנדה]]
+[[hu:Hotel Ruanda]]
+[[nl:Hotel Rwanda]]
+[[ja:ホテル・ルワンダ]]
+[[no:Hotel Rwanda]]
+[[pl:Hotel Ruanda]]
+[[pt:Hotel Ruanda]]
+[[ru:Отель «Руанда»]]
+[[sq:Hotel Rwanda]]
+[[sl:Hotel Ruanda]]
+[[fi:Hotelli Ruanda]]
+[[sv:Hotel Rwanda]]
+[[ta:கொட்டல் ருவாண்டா]]
+[[te:హోటల్ రువాండా]]
+[[tr:Hotel Ruanda]]
+[[wuu:卢旺达旅馆]]
+[[zh:卢旺达饭店]]
