*Empty MediaWiki Message*

--- a/Inka.mw
+++ b/Inka.mw
@@ -5,6 +5,10 @@
 
 '''Inyana''' (izina mu Cyongereza ''calf'')
 
+== Indwara z’inka ==
+Indwara z’inka muri rusange ziterwa n’udukoko nka virusi, bacteria n’ibihumyo. Hano hari zimwe mundwara zifata inka:
+
+== Amafoto ==
 <gallery>
 Image:CH cow 2.jpg|<font color="green">Braunvieh </font>
 Image:Hereford bull large.jpg|<font color="green">Hereford </font>
