--- a/Inka.mw
+++ b/Inka.mw
@@ -10,14 +10,14 @@ Indwara z’inka muri rusange ziterwa n’udukoko nka virusi, bacteria n’ibihu
 
 == Amafoto ==
 <gallery>
-Image:CH cow 2.jpg|<font color="green">Braunvieh </font>
-Image:Hereford bull large.jpg|<font color="green">Hereford </font>
-Image:Brahman Baby.jpg|<font color="green">Brahman</font>
-Image:Simmentaler Fleckvieh.jpg|<font color="green">Simmental</font>
-Image:Koe in weiland bij Gorssel.JPG|<font color="green">Holstein</font>
-Image:Angus cattle 17.jpg|<font color="green">Angus</font>
-Image:Maremma_z01.jpg|<font color="green">Maremma</font>
-Image:Longhorns 037.jpg|<font color="green">Longhorns</font>
+Image:CH cow 2.jpg|<font color="grey">Braunvieh </font>
+Image:Hereford bull large.jpg|<font color="grey">Hereford </font>
+Image:Brahman Baby.jpg|<font color="grey">Brahman</font>
+Image:Simmentaler Fleckvieh.jpg|<font color="grey">Simmental</font>
+Image:Koe in weiland bij Gorssel.JPG|<font color="grey">Holstein</font>
+Image:Angus cattle 17.jpg|<font color="grey">Angus</font>
+Image:Maremma_z01.jpg|<font color="grey">Maremma</font>
+Image:Longhorns 037.jpg|<font color="grey">Longhorns</font>
 </gallery>
 
 [[Category:Inyamabere]]
