--- a/Inka.mw
+++ b/Inka.mw
@@ -8,6 +8,14 @@
 == Indwara z’inka ==
 Indwara z’inka muri rusange ziterwa n’udukoko nka virusi, bacteria n’ibihumyo. Hano hari zimwe mundwara zifata inka:
 
+'''Akaguru n’akanwa''' : Iyi ndwara iterwa n’agakoko ka virusi. Ituma itungo ricika integer rikagira n’umuriro. Ifata ururimi, iminwa,igikanu, amaguru, amacebe n’amabere akagira ububabare.
+
+''Kuyigenzura'' : Ukongera isuku no gukingira. Akenshi kuyihagarika biragora iyo yagaragaye. Kubera ibyo, ni byiza kwica izarwaye.
+
+'''Indwara ya tuberculosis''' : Ni indwara iramba iterwa na bacteri. Yi ndwara irakaze cyane kuko n’abantu bayandura bayikuye kunka inyuze mu mata no kubikomoka ku mata.
+
+''Kuyigenzura'' : Gufata ingamba zo gushyira mu kato no gupima bihoraho iyi ndwara. Amatungo adwaye agomba gushyirwa mukato kandi akabagwa. Gutera imiti yica udukoko buri gihe.
+
 == Amafoto ==
 <gallery>
 Image:CH cow 2.jpg|<font color="grey">Braunvieh </font>
