--- a/Inka.mw
+++ b/Inka.mw
@@ -16,6 +16,16 @@ Indwara z’inka muri rusange ziterwa n’udukoko nka virusi, bacteria n’ibihu
 
 ''Kuyigenzura'' : Gufata ingamba zo gushyira mu kato no gupima bihoraho iyi ndwara. Amatungo adwaye agomba gushyirwa mukato kandi akabagwa. Gutera imiti yica udukoko buri gihe.
 
+'''Indwara ya lung plague''' (''pleuropneumonia'') : Ni indwara iterwa n’agakoko ka virusi ituma itungo rikorora rigacika integer mbere y’uko ripfa. Ishobora kugenzurwa ushyira amatungo adwaye ukwayo.
+
+'''Indwara ya Rinderpest''' (''cattle plague'') : Ni indwara ikaze iterwa n’agakoko ka virusi. Ibimenyetso harimo kutamera neza mu gifu bigatera guhitwa, umuriro mwinshi, gusohora imyanda ivanze n’amaraso no gucika integer muri rusange ku matungo.
+
+''Kuyigenzura'' : Ishobora kuvurwa ukoresha urukingo rwo kwirinda no gushyira amatungo adwaye ukwayo.
+
+'''Indwara y’inzoka''' : Murizo harimo flukes, inzoka zo mumazi n’inzoka zo kubutaka. Ibimenyetso harimo kutarya.
+
+''Kuyigenzura'' : Guhora wica inzoka. Isuku nziza. Guhindura aho kororera.
+
 == Amafoto ==
 <gallery>
 Image:CH cow 2.jpg|<font color="grey">Braunvieh </font>
