--- a/Inka.mw
+++ b/Inka.mw
@@ -26,6 +26,12 @@ Indwara z’inka muri rusange ziterwa n’udukoko nka virusi, bacteria n’ibihu
 
 ''Kuyigenzura'' : Guhora wica inzoka. Isuku nziza. Guhindura aho kororera.
 
+'''Indwara y’umusinziro'''( Trypanosomiasis) : Iyi ndwara iterwa n’isasi yitwa tsetse. Udukoko dushwanyaguza ingingo zo mu maraso. Ibimenyetso harimo muri rusange gucika intege n’umuriro mwinshi. Kuyirinda bishobora wica amasasi ya tsetse no gukingira. Ishobora kugenzurwa ushyira amatungo adwaye ukwayo no kuyabaga.
+
+'''Udukoko tubeshwaho n’inyamanswa''': Utu dukoko duto dutwara indwara ariko udukoko dukaze ni nka ikirongwe,amasazi, n’inda. Ikirongwe nicyo kiboneka cyane kandi gitera cyane umuriro.
+
+Uburyo butatu bwo kugenzura udukoko: Kugira aho ziba hasukuye. Kogesha amatungo amazi yica udukoko. Guhozaho umwotsi wirukana udukoko.
+
 == Amafoto ==
 <gallery>
 Image:CH cow 2.jpg|<font color="grey">Braunvieh </font>
