--- a/Inka.mw
+++ b/Inka.mw
@@ -32,6 +32,12 @@ Indwara z’inka muri rusange ziterwa n’udukoko nka virusi, bacteria n’ibihu
 
 Uburyo butatu bwo kugenzura udukoko: Kugira aho ziba hasukuye. Kogesha amatungo amazi yica udukoko. Guhozaho umwotsi wirukana udukoko.
 
+== Ikiraro cy’inka ==
+
+Ikiraro ni ingenzi ku matungo n’uburyo bwo korora bwerekana ubwoko bazifashisha. Ubwoko bw’ibiraro burimo ibice bitatu hari aho bubaka hato hagatanga umusaruro mwinshi, aharinganiye n’ahanini ariko hatanga umusaruro muke.
+
+Ubwoko bubiri bwambere busaba kubaka ikiraro gifite igisenge n’uruzitiro, mugihe ubwoko bwa gatatu budasaba ikiraro kubera ko ureka ubushyo buke bwakijyambere cyangwa ntabwo babureka bukarisha mu gisambu.  Ikibitandukanya ni igihe amatungo amara ari hanze y’ikiraro.
+
 == Amafoto ==
 <gallery>
 Image:CH cow 2.jpg|<font color="grey">Braunvieh </font>
