--- a/Inka.mw
+++ b/Inka.mw
@@ -50,6 +50,9 @@ Image:Maremma_z01.jpg|<font color="grey">Maremma</font>
 Image:Longhorns 037.jpg|<font color="grey">Longhorns</font>
 </gallery>
 
+== Imiyoboro ==
+*http://rwanda.thebeehive.org/category/topics/agriculture/livestock-farming/cattle-keeping
+
 [[Category:Inyamabere]]
 
 [[ace:Leumo]]
