--- a/Igiceceni.mw
+++ b/Igiceceni.mw
@@ -2,12 +2,12 @@
 
 == umugereka – ubuke ==
  
-**'''арц''' &ndash; '''аьрцнаш''' umusozi &ndash; imisozi 
-**'''мотт''' &ndash; '''меттанаш''' ururimi &ndash; indimi
-**'''бутт''' &ndash; '''беттанаш''' ukwezi &ndash; amezi
-**'''йоI''' &ndash; '''мехкарий''' umukobwa &ndash; abakobwa 
-**'''бож''' &ndash; '''бежалой''' ihene &ndash; ihene
-**'''етт''' &ndash; '''хьелий''' inka &ndash; inka
+*'''арц''' &ndash; '''аьрцнаш''' umusozi &ndash; imisozi 
+*'''мотт''' &ndash; '''меттанаш''' ururimi &ndash; indimi
+*'''бутт''' &ndash; '''беттанаш''' ukwezi &ndash; amezi
+*'''йоI''' &ndash; '''мехкарий''' umukobwa &ndash; abakobwa 
+*'''бож''' &ndash; '''бежалой''' ihene &ndash; ihene
+*'''етт''' &ndash; '''хьелий''' inka &ndash; inka
  
 
 
