--- a/Igiceceni.mw
+++ b/Igiceceni.mw
@@ -9,6 +9,6 @@
 *'''бож''' &ndash; '''бежалой''' ihene &ndash; ihene
 *'''етт''' &ndash; '''хьелий''' inka &ndash; inka
  
-
+== Alfabeti ya Igiceceni ==
 
 [[Category:Indimi]]
