/* Alfabeti ya Igiceceni */

--- a/Igiceceni.mw
+++ b/Igiceceni.mw
@@ -11,4 +11,127 @@
  
 == Alfabeti ya Igiceceni ==
 
+{|class="wikitable"
+|-
+! Cyrillic
+! Izina
+! New Latin
+! Izina
+! IPA
+|-
+|А а||а||A a||a||/ə/, /ɑː/
+|-
+|Аь аь||аь||Ä ä||ä||/æ/, /æː/
+|-
+|Б б||бэ||B b||be||/b/
+|-
+|В в||вэ||V v||ve||/v/
+|-
+|Г г||гэ||G g||ge||/ɡ/
+|-
+|ГӀ гӀ||гӀа||Ġ ġ||ġa||/ɣ/
+|-
+|Д д||дэ||D d||de||/d/
+|-
+|Е е||е||E e||e||/e/, /ɛː/, /je/, /ie/
+|-
+|Ё ё||ё||yo||||/jo/ etc.
+|-
+|Ж ж||жэ||Ƶ ƶ||ƶe||/ʒ/, /dʒ/
+|-
+|З з||зэ||Z z||ze||/z/, /dz/
+|-
+|И и||и||I i||i||/ɪ/
+|-
+|Ий ий|| ||Ii ii ||||/iː/
+|-
+|Й й<br />(я, ю, е)||доца и||Y y||doca i||/j/
+|-
+|К к||к||K k||ka||/k/
+|-
+|Ккх ккх|| ||Kk kk||||/kː/
+|-
+|Кх кх||кх||Q q||qa||/q/
+|-
+|Кхкх кхкх|| ||Qq qq||||/qː/
+|-
+|Къ къ||къа||Q̇ q̇||q̇a||/qʼ/
+|-
+|КӀ кӀ||кӀа||Kh kh||kha||/kʼ/
+|-
+|Л л||лэ||L l||el||/l/
+|-
+|М м||мэ||M m||em||/m/
+|-
+|Н н||нэ||N n||en||/n/
+|-
+|О о||о||O o||o||/o/, /ɔː/, /wo/, /uo/
+|-
+|Оь оь||оь||Ö ö||ö||/ɥø/, /yø/
+|-
+|П п||пэ||P p||pe||/p/
+|-
+|Пп пп|| ||Pp pp||||/pː/
+|-
+|ПӀ пӀ||пӀа||Ph ph||pha||/pʼ/
+|-
+|Р р||рэ||R r||er||/r/
+|-
+|РхӀ рхӀ|| ||Rh rh||||/r̥/
+|-
+|С с||сэ||S s||es||/s/
+|-
+|Сс сс|| ||Ss ss||||/sː/
+|-
+|Т т||тэ||T t||te||/t/
+|-
+|Тт тт|| ||Tt tt||||/tː/
+|-
+|ТӀ тӀ||тӀа||Th th||tha||/tʼ/
+|-
+|У у||у||U u||u||/uʊ/
+|-
+|Ув ув|| ||Uu uu ||||/uː/
+|-
+|Уь уь||уь||Ü ü||ü||/y/
+|-
+|Ф ф||фэ||F f||ef||/f/
+|-
+|Х х||хэ||X x||xa||/x/
+|-
+|Хь хь||хьа||Ẋ ẋ||ẋa||/ʜ/
+|-
+|ХӀ хӀ||хӀа||H h||ha||/h/
+|-
+|Ц ц||цэ||C c||ce||/ts/
+|-
+|ЦӀ цӀ||цӀа||Ċ ċ||ċe||/tsʼ/
+|-
+|Ч ч||чэ||Ç ç||çe||/tʃ/
+|-
+|ЧӀ чӀ||чӀа||Ç̇ ç̇||ç̇e||/tʃʼ/
+|-
+|Ш ш||шэ||Ş ş||şa||/ʃ/
+|-
+|Щ щ||щэ|| || ||
+|-
+|(Ъ) ъ||чӀогӀа хьаьрк||Ə ə||ç̇oġa ẋärk||/ʔ/
+|-
+|(Ы) ы||ы|| || ||
+|-
+|(Ь) ь||кӀеда хьаьрк|| || ||
+|-
+|Э э||э||E e||e||/e/ etc.
+|-
+|Ю ю||ю||yu||||/ju/ etc.
+|-
+|Юь юь||юь||yü||||/jy/ etc.
+|-
+|Я я||я||ya||||/ja/ etc.
+|-
+|Яь яь||яь||yä||||/jæ/ etc.
+|-
+|Ӏ Ӏ||Ӏа||J j||ja||/ʡ/, /ˤ/
+|}
+
 [[Category:Indimi]]
