*Empty MediaWiki Message*

--- a/Igiceceni.mw
+++ b/Igiceceni.mw
@@ -135,3 +135,54 @@
 |}
 
 [[Category:Indimi]]
+
+[[af:Tsjetsjnies]]
+[[ar:لغة شيشانية]]
+[[be-x-old:Чачэнская мова]]
+[[br:Tchetcheneg]]
+[[bg:Чеченски език]]
+[[bxr:Сэсэн хэлэн]]
+[[ca:Txetxè]]
+[[cv:Чечен чĕлхи]]
+[[cs:Čečenština]]
+[[da:Tjetjensk]]
+[[de:Tschetschenische Sprache]]
+[[et:Tšetšeeni keel]]
+[[es:Idioma checheno]]
+[[eo:Ĉeĉena lingvo]]
+[[fr:Tchétchène]]
+[[gl:Lingua chechena]]
+[[ko:체첸어]]
+[[hr:Čečenski jezik]]
+[[os:Цæцæйнаг æвзаг]]
+[[is:Téténska]]
+[[it:Lingua cecena]]
+[[he:צ'צ'נית]]
+[[ka:ჩეჩნური ენა]]
+[[ku:Çeçenî]]
+[[lbe:Мичихичнал маз]]
+[[lv:Čečenu valoda]]
+[[lt:Čečėnų kalba]]
+[[hu:Csecsen nyelv]]
+[[mk:Чеченски јазик]]
+[[mr:चेचन भाषा]]
+[[ms:Bahasa Chechen]]
+[[nl:Tsjetsjeens]]
+[[ja:チェチェン語]]
+[[ce:Нохчийн мотт]]
+[[no:Tsjetsjensk]]
+[[oc:Chechèn]]
+[[pl:Język czeczeński]]
+[[pt:Língua chechena]]
+[[ro:Limba cecenă]]
+[[ru:Чеченский язык]]
+[[sah:Чэчиэн тыла]]
+[[sl:Čečenščina]]
+[[sr:Чеченски језик]]
+[[fi:Tšetšeenin kieli]]
+[[sv:Tjetjenska]]
+[[ta:செச்சன மொழி]]
+[[th:ภาษาเชเชน]]
+[[tr:Çeçence]]
+[[uk:Чеченська мова]]
+[[zh:車臣語]]
