*Empty MediaWiki Message*

--- a/Igiceceni.mw
+++ b/Igiceceni.mw
@@ -1,4 +1,4 @@
-'''Igiceceni''' ni [[ururimi]] rw’[[abaceceni]] na rwa [[Ceceniya]]. 
+'''Igiceceni''' (izina mu igiceceni: ''Нохчийн мотт'' cyangwa ''Noxçiyn mott'') ni [[ururimi]] rw’[[abaceceni]] na rwa [[Ceceniya]]. 
 
 == umugereka – ubuke ==
  
