*Empty MediaWiki Message*

--- a/Icyabukaziyani.mw
+++ b/Icyabukaziyani.mw
@@ -152,3 +152,61 @@
 |-----
 | Џь џь|| ǰ'|| /d͡ʒ/
 |}
+
+[[ab:Аҧсуа бызшәа]]
+[[an:Idioma abkhasio]]
+[[az:Abxaz dili]]
+[[be:Абхазская мова]]
+[[be-x-old:Абхаская мова]]
+[[bg:Абхазки език]]
+[[bn:আবখাজ ভাষা]]
+[[br:Abc'hazeg]]
+[[ca:Abkhaz]]
+[[ceb:Pinulongang Abhaso]]
+[[crh:Abhaz tili]]
+[[cs:Abcházština]]
+[[cv:Абхаз чĕлхи]]
+[[cy:Abchaseg]]
+[[de:Abchasische Sprache]]
+[[el:Αμπχαζική γλώσσα]]
+[[en:Abkhaz language]]
+[[eo:Abĥaza lingvo]]
+[[es:Idioma abjasio]]
+[[et:Abhaasi keel]]
+[[eu:Abkhazera]]
+[[fa:زبان آبخازی]]
+[[fi:Abhaasin kieli]]
+[[ga:An Abcáisis]]
+[[gl:Lingua abkhaza]]
+[[he:אבחזית]]
+[[hr:Abhaski jezik]]
+[[hu:Abház nyelv]]
+[[is:Abkasíska]]
+[[it:Lingua abcasa]]
+[[ja:アブハズ語]]
+[[ka:აფხაზური ენა]]
+[[ko:압하스어]]
+[[kv:Абхаз кыв]]
+[[lt:Abchazų kalba]]
+[[lv:Abhāzu valoda]]
+[[mk:Апхаски јазик]]
+[[ms:Bahasa Abkhaz]]
+[[nl:Abchazisch]]
+[[nn:Abkhasisk språk]]
+[[no:Abkhasisk]]
+[[os:Абхазаг æвзаг]]
+[[pl:Język abchaski]]
+[[pt:Língua abecásia]]
+[[ro:Limba abhază]]
+[[ru:Абхазский язык]]
+[[sh:Abhaški jezik]]
+[[simple:Abkhaz language]]
+[[sk:Abcházština]]
+[[sv:Abchaziska]]
+[[ta:அபுகாசிய மொழி]]
+[[th:ภาษาอับฮาเซีย]]
+[[tk:Abhaz dili]]
+[[tr:Abhazca]]
+[[uk:Абхазька мова]]
+[[yo:Èdè Abkhaz]]
+[[zh:阿布哈茲語]]
