--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -43,7 +43,70 @@ Byagutunga &ndash;
 Byemero &ndash; 
 
 == Inyuguti C ==
+*Candari &ndash; 
+*Coca &ndash; 
+*Condo &ndash; 
+*Cyibukayire &ndash; 
+*Cyigenza &ndash; 
+*Cyirima &ndash; 
+*Cyimana &ndash; 
+*Cyitatire &ndash; 
 
+== Inyuguti G ==
+Gashayija (Rwagashayija) &ndash; 
+Gasindikira &ndash; 
+Gashugi (Bishugi, Segashugi,...) &ndash; 
+Gitefana &ndash; 
+Gitera (Butera, Gatera) &ndash; 
+Gakwaya (Nyirinkwaya) &ndash; 
+Gacakure &ndash; 
+Gacinya &ndash; 
+Gaga &ndash; 
+Gahama &ndash; 
+Gahamanyi &ndash; 
+Gahigiro &ndash; 
+Gahima &ndash; 
+Gahongayire &ndash; 
+Gaju &ndash; 
+Gakara &ndash; 
+Gakumba &ndash; 
+Gakwandi &ndash; 
+Gasabwoya &ndash; 
+Gasamagera &ndash; 
+Gasamunyiga &ndash; 
+Gasarabwe &ndash; 
+Gasarasi &ndash; 
+Gasasira &ndash; 
+Gasazamigeri &ndash; 
+Gasengayire &ndash; 
+Gasiga &ndash; 
+Gasigwa &ndash; 
+Gasiha &ndash; 
+Gasindikiza &ndash; 
+Gashabizi &ndash; 
+Gashagaza &ndash; 
+Gashaku &ndash; 
+Gashayija &ndash; 
+Gashegu &ndash; 
+Gashirabake &ndash; 
+Gashongore &ndash; 
+Gashuhe &ndash; 
+Gashyurishyuri &ndash; 
+Gatabazi &ndash; 
+Gatambara &ndash; 
+Gatarayiha &ndash; 
+Gatari &ndash; 
+Gatemanyi &ndash; 
+Gatete &ndash; 
+Gatikabisi &ndash; 
+Gatorano &ndash; 
+Gatoyi &ndash; 
+Gatsinzi &ndash; 
+Gitori &ndash; 
+Gombaniro &ndash; 
+Gumira &ndash; 
+
+== Inyuguti H ==
 
 == Imiyoboro ==
 *http://www.rwandanames.n.nu/
