--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -108,6 +108,12 @@ Gumira &ndash;
 
 == Inyuguti H ==
 
+== Inyuguti I ==
+
+== Inyuguti J ==
+
+== Inyuguti K ==
+
 == Imiyoboro ==
 *http://www.rwandanames.n.nu/
 
