--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -114,6 +114,142 @@ Gumira &ndash;
 
 == Inyuguti K ==
 
+Kabahita (m) &ndash; 
+Kabanda (m) &ndash; 
+Kabandahe (m) &ndash; 
+Kabandana (m) &ndash; 
+Kabango (m) &ndash; 
+Kabano (m) &ndash; 
+Kabarira (m) &ndash; 
+Kabatsi (m) &ndash; 
+Kabayita (m) &ndash; 
+Kabayiza (m) &ndash; 
+Kabeja &ndash; 
+Kabengera (m) &ndash; 
+Kabera (m) &ndash; 
+Kabibi (m) &ndash; 
+Kabukwisi (m) &ndash; 
+Kaburame (m) &ndash; 
+Kabuto &ndash; 
+Kadamari (f) &ndash; 
+Kagaba (m) &ndash; 
+Kagabo (m) &ndash; 
+Kagaju (m) &ndash; 
+Kagambage (m) &ndash; 
+Kagame &ndash; 
+Kagame (m) &ndash; 
+Kageruka (m) &ndash; 
+Kageza (m) &ndash; 
+Kagoro (m) &ndash; 
+Kagoyire (m) &ndash; 
+Kagurukiza (m) &ndash; 
+Kalisa (m) &ndash; 
+Kamabera (f) &ndash; 
+Kamagaju (f) &ndash; 
+Kamali (m) &ndash; 
+Kamanzi (m) &ndash; 
+Kamariza (f) &ndash; 
+Kamasa (m) &ndash; 
+Kamatali (m) &ndash; 
+Kamegeri (m) &ndash; 
+Kamikazi (f)
+Kamiya (m) &ndash; 
+Kamondo (f) &ndash; 
+Kamongi (m/f) &ndash; 
+Kampayana (m) &ndash; 
+Kampirwa (f) &ndash; 
+Kampogo (f) &ndash; 
+Kamugema (m) &ndash; 
+Kamugire (f) &ndash; 
+Kamugunga (m) &ndash; 
+Kamuzinzi (m) &ndash; 
+Kamwenubusa (m) &ndash; 
+Kana (m) &ndash; 
+Kanamugire (m) &ndash; 
+Kanayoge (m) &ndash; 
+Kandagaye (m) &ndash; 
+Kandeke (m) &ndash; 
+Kandekwe (m) &ndash; 
+Kangeyo (f) &ndash; 
+Kanimba (m) &ndash; 
+Kankuyo (f) &ndash; 
+Kankwanzi (f) &ndash; 
+Kanobana (m) &ndash; 
+Kantamati (f) &ndash; 
+Kantengwa (f) &ndash; 
+Kanyamahanga (m) &ndash; 
+Kanyamanza (m) &ndash; 
+Kanyambuga (m) &ndash; 
+Kanyamugenge (m) &ndash; 
+Kanyangira &ndash; 
+Kanyarengwe (m) &ndash; 
+Kanyarutoke (m) &ndash; 
+Kanyemera (m) &ndash; 
+Kanyenzi (m) &ndash; 
+Kanzayire (Cyanzayire) &ndash; 
+Karake (m) &ndash; 
+Karama (m) &ndash; 
+Karambizi (m) &ndash; 
+Karangwa (m) &ndash; 
+Karani (m) &ndash; 
+Karege (m) &ndash; 
+Karegeya (m) &ndash; 
+Karekezi (m) &ndash; 
+Karema (m) &ndash; 
+Karemangingo (m) &ndash; 
+Karengera (m) &ndash; 
+Karenzi (m) &ndash; 
+Karenzo (m) &ndash; 
+Karera (m) &ndash; 
+Karikurubu (m) &ndash; 
+Karima (m) &ndash; 
+Karinganire (m) &ndash; 
+Karinijabo (m) &ndash; 
+Karuranga (m) &ndash; 
+Karuretwa (m) &ndash; 
+Karyabwite &ndash; 
+Katabarwa (m) &ndash; 
+Kataka &ndash; 
+Kataramuka (m) &ndash; 
+Kavuna &ndash; 
+Kavuna (n) &ndash; 
+Kavutse (m) &ndash; 
+Kayabo (m) &ndash; 
+Kayibanda (m) &ndash; 
+Kayigi (m) &ndash; 
+Kayigumire (m) &ndash; 
+Kayihunda (m) &ndash; 
+Kayihura (m) &ndash; 
+Kayijamahe (m) &ndash; 
+Kayijuka &ndash; 
+Kayijuka (m) &ndash; 
+Kayinamura &ndash; 
+Kayiranga (m) &ndash; 
+Kayirebwa (f) &ndash; 
+Kayishema (m) &ndash; 
+Kayisinga (m/f) &ndash; 
+Kayisire (f) &ndash; 
+Kayitaba (m) &ndash; 
+Kayitakibwa (m) &ndash; 
+Kayitana &ndash; 
+Kayitankore (m) &ndash; 
+Kayitare &ndash; 
+Kayitesi (f) &ndash; 
+Kayitsinga &ndash; 
+Kayonde (m) &ndash; 
+Kayonga (m) &ndash; 
+Kayumba (m) &ndash; 
+Kibuye (m) &ndash; 
+Kidedeli &ndash; 
+Kimanuka &ndash; 
+Kimenyi (m) &ndash; 
+Kimizi (m) &ndash; 
+Kimonyo (m) &ndash; 
+Kinyoni (m) &ndash; 
+Kirazi (m) &ndash; 
+Kiroha (m) &ndash; 
+Kiromba (m) &ndash;
+
 == Imiyoboro ==
 *http://www.rwandanames.n.nu/
 
