--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -250,6 +250,8 @@ Kirazi (m) &ndash;
 Kiroha (m) &ndash; 
 Kiromba (m) &ndash;
 
+== Inyuguti M ==
+
 == Imiyoboro ==
 *http://www.rwandanames.n.nu/
 
