--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -252,6 +252,18 @@ Kiromba (m) &ndash;
 
 == Inyuguti M ==
 
+== Inyuguti N ==
+
+== Inyuguti O ==
+
+== Inyuguti P ==
+
+== Inyuguti R ==
+
+== Inyuguti S ==
+
+== Inyuguti T ==
+
 == Imiyoboro ==
 *http://www.rwandanames.n.nu/
 
