--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -264,6 +264,27 @@ Kiromba (m) &ndash;
 
 == Inyuguti T ==
 
+== Inyuguti U ==
+Udahemuka (m) &ndash; 
+Ugirimfura (m) &ndash; 
+Ukobizaba (m) &ndash; 
+Umuberwa (f) &ndash; 
+Umugwaneza (f) &ndash; 
+Umulisa (f) &ndash; 
+Umutangampundu (f) &ndash; 
+Umutesi (f) &ndash; 
+Unyuzimfura (m) &ndash; 
+Uramukiwe (m) &ndash; 
+Urayeneza (m) &ndash; 
+Urujeni (f) &ndash; 
+Ushizimpumu (f) &ndash; 
+Uwabandi (f) &ndash; 
+Uwanyirigira (f) &ndash; 
+Uwibambe (f/m) &ndash; 
+Uwihanganye (m) &ndash; 
+Uwingabire (f) &ndash; 
+Uwishema (m) &ndash;
+
 == Imiyoboro ==
 *http://www.rwandanames.n.nu/
 
