--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -261,6 +261,74 @@ Kiromba (m) &ndash;
 == Inyuguti R ==
 
 == Inyuguti S ==
+Sakindi &ndash; 
+Sendashonga &ndash; 
+Semugeshi &ndash; 
+Serundari &ndash; 
+Sekabanza &ndash; 
+Simburudari &ndash; 
+Sakindi (m) &ndash; 
+Samukondo (m) &ndash; 
+Samvura (m) &ndash; 
+Sangwa (m) &ndash; 
+Saro (f) &ndash; 
+Sayinzoga (m) &ndash; 
+Sebatigita (m) &ndash; 
+Sebera (m) &ndash; 
+Sebununguri (m) &ndash; 
+Seburikoko (m) &ndash; 
+Sebuto (m) &ndash; 
+Secyavu (m) &ndash; 
+Secyugu (m) &ndash; 
+Sedogo (m) &ndash; 
+Sefuku (m) &ndash; 
+Sekanyambo (m) &ndash; 
+Sekida (m) &ndash; 
+Sekinanka (m) &ndash; 
+Semahe (m) &ndash; 
+Semajege (m) &ndash; 
+Semavenge (m) &ndash; 
+Seminega (m) &ndash; 
+Semuhanuka (m) &ndash; 
+Semukanya (m) &ndash; 
+Sendagari (m) &ndash; 
+Sendarasi (m) &ndash; 
+Sendashonga (m) &ndash; 
+Sendinga (m) &ndash; 
+Sengoro (m) &ndash; 
+Senguge (m) &ndash; 
+Sentabyo (m) &ndash; 
+Sentashya (m) &ndash; 
+Senteteri (m) &ndash; 
+Senyabuzana (m) &ndash; 
+Senyamadari (m) &ndash; 
+Senyamibwa (m) &ndash; 
+Senyana (m) &ndash; 
+Senyanzobe (m) &ndash; 
+Senyombyi (m) &ndash; 
+Serubuga (m) &ndash; 
+Serudonyori (m) &ndash; 
+Serugarukiramfizi (m) &ndash; 
+Serukenyinkware (m) &ndash; 
+Seruvumba (m) &ndash; 
+Sesonga (m) &ndash; 
+Setukuru (m) &ndash; 
+Sezibera (m) &ndash; 
+Sezirahiga (m) &ndash; 
+Simbiyara (m) &ndash; 
+Sindayigaya (m) &ndash; 
+Sindikubwabo (m) &ndash; 
+Singirankabo (m) &ndash; 
+Sisi (m) &ndash; 
+Subika (m) &ndash; 
+Sunzu (m) &ndash; 
+Shamukiga (m) &ndash; 
+Sharangabo (m) &ndash; 
+Shema (m) &ndash; 
+Shumbusho (m) &ndash; 
+Shyaka (m) &ndash; 
+Shyerezo (m) &ndash; 
+Shyirambere (m) &ndash;
 
 == Inyuguti T ==
 
