--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -259,6 +259,155 @@ Kiromba (m) &ndash;
 == Inyuguti P ==
 
 == Inyuguti R ==
+Rangira (m) &ndash; 
+Rebero (m) &ndash; 
+Rekeraho (m) &ndash; 
+Ribakare (m) &ndash; 
+Ribanje (m) &ndash; 
+Ribarabaje (m) &ndash; 
+Ribaye (m) &ndash; 
+Ringuyeneza (m) &ndash; 
+Rinigumugabo (m) &ndash; 
+Rizinde &ndash; 
+Rizinde (m) &ndash; 
+Rubaduka (m) &ndash; 
+Rubagenga (m) &ndash; 
+Rubagumya (m) &ndash; 
+Rubanda (m) &ndash; 
+Rubangisa (m) &ndash; 
+Rubangura (m) &ndash; 
+Rubashamuheto (m) &ndash; 
+Rubayiza &ndash; 
+Ruberanziza (m) &ndash; 
+Ruberwa (m) &ndash; 
+Rubibi (m) &ndash; 
+Ruboneka (m) &ndash; 
+Rubuye (m) &ndash; 
+Rucekeri (m) &ndash; 
+Rucinya (m) &ndash; 
+Rucogoza (m) &ndash; 
+Rudacogora (m) &ndash; 
+Rudahigwa (m) &ndash; 
+Rudakemwa (m) &ndash; 
+Rudasingwa (m) &ndash; 
+Rudasumbwa (m) &ndash; 
+Rudatsikira (m) &ndash; 
+Rufagari (m) &ndash; 
+Rufali (m) &ndash; 
+Rufuku (m) &ndash; 
+Rugamba (m) &ndash; 
+Rugege (m) &ndash; 
+Rugemintwaza (m) &ndash; 
+Rugerimisare (m) &ndash; 
+Rugerinyange (m) &ndash; 
+Rugina (m) &ndash; 
+Rugira (m) &ndash; 
+Rugiramasasu (m) &ndash; 
+Rugoboka (m) &ndash; 
+Rugomwa (m) &ndash; 
+Rugumire (m) &ndash; 
+Ruhamiliza (m) &ndash; 
+Ruhamyambuga (m) &ndash; 
+Ruhamyandekwe (m) &ndash; 
+Ruhashya (m) &ndash; 
+Ruhinankiko (m) &ndash; 
+Ruhorahoza &ndash; 
+Ruhorahoza (m) &ndash; 
+Ruhumuliza (m) &ndash; 
+Rujindiri (m) &ndash; 
+Rukabu (m) &ndash; 
+Rukara (m) &ndash; 
+Rukeba (m) &ndash; 
+Rukebesha (m) &ndash; 
+Rukemampunzi &ndash; 
+Rukeribuga (m) &ndash; 
+Rukikamoso (m) &ndash; 
+Rukimirana (m) &ndash; 
+Rulinda (m) &ndash; 
+Rumanyinka (m) &ndash; 
+Rumiya (m) &ndash; 
+Rupali (m) &ndash; 
+Rurangirwa (m) &ndash; 
+Ruribikiye (m) &ndash; 
+Rusagara (m) &ndash; 
+Rusangwa (m) &ndash; 
+Rusatsi (m) &ndash; 
+Rushemeza (m) &ndash; 
+Rushingabigwi (m) &ndash; 
+Rushonda (m) &ndash; 
+Rusiha (m) &ndash; 
+Rutagarama (m) &ndash; 
+Rutagayisasa (m) &ndash; 
+Rutagengwa (m) &ndash; 
+Rutagiragahu (m) &ndash; 
+Rutanga (m) &ndash; 
+Rutaremara (m) &ndash; 
+Rutarindwa (m) &ndash; 
+Rutayisire (m) &ndash; 
+Rutebuka (m) &ndash; 
+Rutegamihigo (m) &ndash; 
+Rutegera (m) &ndash; 
+Rutenderi (m) &ndash; 
+Ruterandongozi (m) &ndash; 
+Ruti (m) &ndash; 
+Rutinywa (m) &ndash; 
+Rutirwicyugu (m) &ndash; 
+Rutiyomba (m) &ndash; 
+Rutsindintwarane (m) &ndash; 
+Rutsinga &ndash; 
+Ruvunantwali (m) &ndash; 
+Ruvusha (m) &ndash; 
+Ruzibiza (m) &ndash; 
+Ruzindana &ndash; 
+Ruzindana (m) &ndash; 
+Rwabigwi (m) &ndash; 
+Rwabugiri &ndash; 
+Rwabugiri (m) &ndash; 
+Rwabukumba &ndash; 
+Rwabukwisi (m) &ndash; 
+Rwabutogo &ndash; 
+Rwabutogo (m) &ndash; 
+Rwabyuma (m) &ndash; 
+Rwagafirita (m) &ndash; 
+Rwagaju (m) &ndash; 
+Rwagasana (m) &ndash; 
+Rwagasore (m) &ndash; 
+Rwagatare (m) &ndash; 
+Rwajekuruha (m) &ndash; 
+Rwakayiru (m) &ndash; 
+Rwakigarama (m) &ndash; 
+Rwalinda (m) &ndash; 
+Rwamakuba (m) &ndash; 
+Rwamasirabo (m) &ndash; 
+Rwampungu &ndash; 
+Rwamu (m) &ndash; 
+Rwamuhizi (m) &ndash; 
+Rwamulinda (m) &ndash; 
+Rwamuningi &ndash; 
+Rwamurindi &ndash; 
+Rwangombwa (m) &ndash; 
+Rwanyagasore (m) &ndash; 
+Rwasa (m) &ndash; 
+Rwasamanzi (m) &ndash; 
+Rwasibo (m) &ndash; 
+Rwasubutare (m) &ndash; 
+Rwego (m) &ndash; 
+Rwidegembya (m) &ndash; 
+Rwigema &ndash; 
+Rwigema (m) &ndash; 
+Rwigemera &ndash; 
+Rwigemera (m) &ndash; 
+Rwirungu (m) &ndash; 
+Rwitsibagura (m) &ndash; 
+Rwiyamirira (m) &ndash; 
+Rwogera (m) &ndash; 
+Rwubahuka (m) &ndash; 
+Rwubusisi &ndash; 
+Rwubusisi (m) &ndash;
+Ryabonyende (m) &ndash; 
+Ryamukuru (m) &ndash; 
+Ryangombe (m) &ndash; 
+Ryumugabe (m) &ndash;
 
 == Inyuguti S ==
 Sakindi &ndash; 
