--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -251,6 +251,136 @@ Kiroha (m) &ndash;
 Kiromba (m) &ndash;
 
 == Inyuguti M ==
+Mabano (m) &ndash; 
+Mafene (m) &ndash; 
+Maganya (m) &ndash; 
+Mageza (m) &ndash; 
+Makombe (m) &ndash; 
+Makuza (m) &ndash; 
+Mambo (m) &ndash; 
+Masabo (m) &ndash; 
+Mashira (m) &ndash; 
+Matabaro (m) &ndash; 
+Matata (m) &ndash; 
+Matene (m) &ndash; 
+Mavugabandi (m) &ndash; 
+Mazimpaka (m) &ndash; 
+Mbanda (m) &ndash; 
+Mbarutso (m) &ndash; 
+Mbishibishi (m) &ndash; 
+Mbungira (m) &ndash; 
+Mfuruta (m) &ndash; 
+Miburo (m) &ndash; 
+Migabo (m) &ndash; 
+Migezo (m) &ndash; 
+Minega (m) &ndash; 
+Mirimba (m) &ndash; 
+Miseke (m) &ndash; 
+Mpambara (m) &ndash; 
+Mpitabakana (m) &ndash; 
+Mpogazi (m) &ndash; 
+Muberuka (m) &ndash; 
+Mucumangendo (f) &ndash; 
+Mudenge (m) &ndash; 
+Mugabukenga (m) &ndash; 
+Mugabushaka (m) &ndash; 
+Mugarura (m) &ndash; 
+Mugenzi (m) &ndash; 
+Mugemahica (m) &ndash; 
+Mugemana (m) &ndash; 
+Mugemanshuro (m) &ndash; 
+Muhakwa (m) &ndash; 
+Muhigirwa (m) &ndash; 
+Muhikira (m) &ndash; 
+Muhimpundu (f) &ndash; 
+Muhire (m) &ndash; 
+Muhirwa (m) &ndash; 
+Muhongeshanseko (f) &ndash; 
+Muhongerere (f) &ndash; 
+Muhongerwa (f) &ndash; 
+Mujijima (m) &ndash; 
+Mujinya (m) &ndash; 
+Mukabagire (f) &ndash; 
+Mukama (m) &ndash; 
+Mukamisha (f) &ndash; 
+Mukamugema (f) &ndash; 
+Mukamusana (f) &ndash; 
+Mukamusoni (f) &ndash; 
+Mukamuyango (f) &ndash; 
+Mukandamage (f) &ndash; 
+Mukangamije (f) &ndash; 
+Mukansanga (f) &ndash; 
+Mukantagara (f) &ndash; 
+Mukanyangezi (f) &ndash; 
+Mukanyarwaya (f) &ndash; 
+Mukanyemazi (f) &ndash; 
+Mukanyonga (f) &ndash; 
+Mukarage (m) &ndash; 
+Mukaremera (f) &ndash; 
+Mukarutabana (f) &ndash; 
+Mukarutesi (f) &ndash; 
+Mukaruziga (f) &ndash; 
+Mukiga (m) &ndash; 
+Mukurira (m) &ndash; 
+Mukuralinda (m) &ndash; 
+Mukwende (m) &ndash; 
+Mukwiye (m) &ndash; 
+Mulenzi (m) &ndash; 
+Mulindabigwi (m) &ndash; 
+Munana (m) &ndash; 
+Munanira (m) &ndash; 
+Mundere (m) &ndash; 
+Munyagasheke (m) &ndash; 
+Munyakarambi (m) &ndash; 
+Munyakayanza (m) &ndash; 
+Munyampundu (m) &ndash; 
+Munyandamutsa (m) &ndash; 
+Munyangoga (m) &ndash; 
+Munyangango/Munyengango (m) &ndash; 
+Munyanziza (m) &ndash; 
+Munyaneza (m) &ndash; 
+Munyarigoga (m) &ndash; 
+Munyanyebinja (m) &ndash; 
+Munyentwali (m) &ndash; 
+Munyeragwe (m) &ndash; 
+Munyeshyaka (m) &ndash; 
+Munyeyinga (m) &ndash; 
+Munyinya (m) &ndash; 
+Mupagasi (m) &ndash; 
+Murangamirwa (f) &ndash; 
+Murangira (m) &ndash; 
+Murara (m) &ndash; 
+Murasandonyi (m) &ndash; 
+Murekatete (f) &ndash; 
+Murekezi (m) &ndash; 
+Murutamanga (m) &ndash; 
+Musafiri (m) &ndash; 
+Musaniwabo (m/f) &ndash; 
+Musabyimana (m) &ndash; 
+Museruka (m) &ndash; 
+Musinga (m) &ndash; 
+Musomakweli (m) &ndash; 
+Musonera (m) &ndash; 
+Musoni (m) &ndash; 
+Musheshembugu (f) &ndash; 
+Mushonganono (f) &ndash; 
+Mutabagisha (m) &ndash; 
+Mutabaruka (m) &ndash; 
+Mutambarungu (m/f) &ndash; 
+Mutambuka (m) &ndash; 
+Mutamuriza (f) &ndash; 
+Mutagisha (m) &ndash; 
+Mutangana (m) &ndash; 
+Mutara (m) &ndash; 
+Muteteri (f) &ndash; 
+Mutumwambazi (f) &ndash; 
+Mutumwinka (f) &ndash; 
+Mutungirehe (m) &ndash; 
+Muvunyi (m) &ndash; 
+Muyenzi (m) &ndash; 
+Mwemezi (m) &ndash; 
+Mwerekande (m) &ndash; 
+Mwiza (f) &ndash;
 
 == Inyuguti N ==
 
