--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -383,6 +383,172 @@ Mwerekande (m) &ndash;
 Mwiza (f) &ndash;
 
 == Inyuguti N ==
+Naho (m) &ndash; 
+Nayigiziki (m) &ndash; 
+Ncamihigo (m) &ndash; 
+Ndabakenga (m) &ndash; 
+Ndabambalire (f) &ndash; 
+Ndagije (m) &ndash; 
+Ndagijimana (m) &ndash; 
+Ndahindurwa (m) &ndash; 
+Ndahiro (m) &ndash; 
+Ndakaza (m) &ndash; 
+Ndakorerwa (m) &ndash; 
+Ndamage (m) &ndash; 
+Ndangamyambi (m) &ndash; 
+Ndanguza (m) &ndash; 
+Ndateba (m) &ndash; 
+Ndayambaje (m) &ndash; 
+Ndayisenga (m) &ndash; 
+Ndayitabi (m) &ndash; 
+Ndayizigiye (m) &ndash; 
+Ndekezi (m) &ndash; 
+Ndengejeho (m) &ndash; 
+Ndimbati (m) &ndash; 
+Ndimukaga (m) &ndash; 
+Ndimurwango (m) &ndash; 
+Ndinda (m) &ndash; 
+Ndizeye (m) &ndash; 
+Ndongo (m) &ndash; 
+Ndori (m) &ndash; 
+Ngabo (m) &ndash; 
+Ngabonzima (m) &ndash; 
+Ngaboyisonga (m) &ndash; 
+Ngamije (m) &ndash; 
+Ngango (m) &ndash; 
+Ngarambe (m) &ndash; 
+Ngarure (m) &ndash; 
+Ngegera (m) &ndash; 
+Ngendandumwe (m) &ndash; 
+Ngirabakunzi (m) &ndash; 
+Ngiruwonsanga (m) &ndash; 
+Ngoga (m) &ndash; 
+Ngomanzungu (m) &ndash; 
+Ngurumbe (m) &ndash; 
+Ni(yi)bizi (m) &ndash; 
+Ni(yi)shaka (m) &ndash; 
+Nibishaka (m) &ndash; 
+Nicyolibera (m) &ndash; 
+Nijimbere (m) &ndash; 
+Nikwigize (m) &ndash; 
+Nkera (m) &ndash; 
+Nkerabigwi (m) &ndash; 
+Nkeramihigo (m) &ndash; 
+Nkeramugaba (m) &ndash; 
+Nkezabera (m) &ndash; 
+Nkomati (m) &ndash; 
+Nkongori (m) &ndash; 
+Nkoronko (m) &ndash; 
+Nkotanyi (m) &ndash; 
+Nkubiri (m) &ndash; 
+Nkubito (m) &ndash; 
+Nkundabakize (m) &ndash; 
+Nkuranga (m) &ndash; 
+Nkurunziza (m) &ndash; 
+Nkusi (m) &ndash; 
+Nsabimana (m) &ndash; 
+Nsanzabaganwa (m) &ndash; 
+Nsanzabera (m) &ndash; 
+Nsanze (m) &ndash; 
+Nsanzurwimo (m) &ndash; 
+Nsekalije (m) &ndash; 
+Nsenga (m) &ndash; 
+Nsengimana (m) &ndash; 
+Nsengiyumva (m) &ndash; 
+Nshogozabahizi (m) &ndash; 
+Ntabahwana (m) &ndash; 
+Ntabomvura (m) &ndash; 
+Ntabyera (m) &ndash; 
+Ntaganda &ndash; 
+Ntaganda (m) &ndash; 
+Ntagara (m) &ndash; 
+Ntagugura (m) &ndash; 
+Ntahobari (m) &ndash; 
+Ntakamaro (m) &ndash; 
+Ntakavuro (m) &ndash; 
+Ntamabyariro (m) &ndash; 
+Ntamahungiro (m) &ndash; 
+Ntamakemwa (m) &ndash; 
+Ntamavukiro (m) &ndash; 
+Ntambabazi (m/f) &ndash; 
+Ntambara (m) &ndash; 
+Ntampuhwe (m) &ndash; 
+Ntandayera (m) &ndash; 
+Ntango (m) &ndash; 
+Ntashamaje (m/f) &ndash; 
+Ntawe (m) &ndash; 
+Nteturuye (m) &ndash; 
+Nteziryayo (m) &ndash; 
+Ntibenda (m) &ndash; 
+Ntibihangana (m) &ndash; 
+Ntidendereza (m) &ndash; 
+Ntigashira (m) &ndash; 
+Ntijyinama (m) &ndash; 
+Ntirushwa (m) &ndash; 
+Ntukamazina (m) &ndash; 
+Ntukanyagwe (m) &ndash; 
+Ntuyahaga (m) &ndash; 
+Nyabunyana (f) &ndash; 
+Nyabyenda (m) &ndash; 
+Nyagahakwa (m) &ndash; 
+Nyagakecuru (f) &ndash; 
+Nyagatare (m) &ndash; 
+Nyagisaza (m) &ndash; 
+Nyakabwa (m) &ndash; 
+Nyakarashi (m) &ndash; 
+Nyakazungu (m) &ndash; 
+Nyamacumu (m) &ndash; 
+Nyamadigi (m) &ndash; 
+Nyaminani (m) &ndash; 
+Nyampame &ndash; 
+Nyampinga (f) &ndash; 
+Nyamubi (m) &ndash; 
+Nyamucenshera (m) &ndash; 
+Nyamutezi (m) &ndash; 
+Nyamwasa &ndash; 
+Nyandwi (m) &ndash; 
+Nyanebyiri (m) &ndash; 
+Nyangezi &ndash; 
+Nyanzira (m) &ndash; 
+Nyaritwa (m) &ndash; 
+Nyatanyi (m) &ndash; 
+Nyemazi (m) &ndash; 
+Nyetera (m) &ndash; 
+Nyirabundibundi (f) &ndash; 
+Nyirahuku (f/m) &ndash; 
+Nyirahwandari (f) &ndash; 
+Nyirahwehwe (f) &ndash; 
+Nyirakigeri (f) &ndash; 
+Nyirakigwene (f) &ndash; 
+Nyiramashashi (f) &ndash; 
+Nyiramavugo (f) &ndash; 
+Nyiramongi (f) &ndash; 
+Nyiramugwahashashe (f) &ndash; 
+Nyiramugwera (f) &ndash; 
+Nyirankomo (f) &ndash; 
+Nyirantamati (f) &ndash; 
+Nyirawera (f) &ndash; 
+Nyirayuhi (f) &ndash; 
+Nyirimbirima (f) &ndash; 
+Nyiriminega (f) &ndash; 
+Nyirimiringa (f) &ndash; 
+Nyirindekwe (m) &ndash; 
+Nyiringabo (m) &ndash; 
+Nyiringango (m) &ndash; 
+Nyiringondo &ndash; 
+Nyiringondo (m) &ndash; 
+Nyirinkindi (m) &ndash; 
+Nyirinkwaya (m) &ndash;
+Nzabonariba (m) &ndash; 
+Nzamba (m) &ndash; 
+Nzamwita (m) &ndash; 
+Nzanana (m) &ndash; 
+Nzarubara (m) &ndash; 
+Nzigamasabo (m) &ndash; 
+Nzigira (m) &ndash; 
+Nzira (m) &ndash; 
+Nziraguseswa (m) &ndash; 
+Nzirorera (m) &ndash;
 
 == Inyuguti O ==
 
