robot Ajoute: [[fr:Abkhaze]]

--- a/Icyabukaziyani.mw
+++ b/Icyabukaziyani.mw
@@ -176,6 +176,7 @@
 [[eu:Abkhazera]]
 [[fa:زبان آبخازی]]
 [[fi:Abhaasin kieli]]
+[[fr:Abkhaze]]
 [[ga:An Abcáisis]]
 [[gl:Lingua abkhaza]]
 [[he:אבחזית]]
