--- a/Alexandre_Kimenyi.mw
+++ b/Alexandre_Kimenyi.mw
@@ -2,3 +2,4 @@ Dr. '''Alexandre Kimenyi''' [[avuka]] i [[Rwanda]]. Ni umwe mu bagize amahirwe y
 
 
 [[Category:Abagabo]]
+[[Category:Abanyarwanda]]
