--- a/Agnes_Matilda_Kalibata.mw
+++ b/Agnes_Matilda_Kalibata.mw
@@ -8,6 +8,6 @@ Dr. '''Agnes Matilda Kalibata''' () Minisitiri w’[[Ubuhinzi]] n’[[Ubworozi]]
 ==  Notes  == 
 <references/>  
 
-[[Category:Rwanda]]
+[[Category:Abanyarwanda]] 
 [[Category:Abaminisitiri]]
 [[Category:Abagore]]
